--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "openai-quickstart-node",
-  "version": "0.1.0",
+  "name": "openai-taking-bot",
+  "version": "0.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -8,10 +8,19 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "^13.1.1",
+    "next": "latest",
     "openai": "^3.1.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-is": "^18.2.0",
+    "styled-components": "^5.3.5"
+  },
+  "devDependencies": {
+    "@types/node": "^18.11.18",
+    "@types/react": "^18.0.27",
+    "@types/react-dom": "^18.0.10",
+    "@types/styled-components": "^5.1.26",
+    "typescript": "^4.9.4"
   },
   "engines": {
     "node": ">=14.6.0"
