--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,9 @@
       "@/lib/*": [
         "src/lib/*"
       ],
+      "@/hooks/*": [
+        "src/hooks/*"
+      ],
       "@/components/*": [
         "src/components/*"
       ]
