--- a/package.json
+++ b/package.json
@@ -16,10 +16,17 @@
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
+    "@next/eslint-plugin-next": "^13.1.6",
     "@types/node": "^18.11.18",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@types/styled-components": "^5.1.26",
+    "@typescript-eslint/eslint-plugin": "^5.49.0",
+    "@typescript-eslint/parser": "^5.49.0",
+    "eslint": "^8.0.1",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-n": "^15.0.0",
+    "eslint-plugin-promise": "^6.0.0",
     "typescript": "^4.9.4"
   },
   "engines": {
