--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-n": "^15.0.0",
     "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-react": "^7.32.2",
     "typescript": "^4.9.4"
   },
   "engines": {
