--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-is": "^18.2.0",
-    "styled-components": "^5.3.5"
+    "styled-components": "^5.3.5",
+    "@notionhq/client": "^2.2.3"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^13.1.6",
