--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "test": "jest --watch",
+    "test:ci": "jest --ci"
   },
   "dependencies": {
     "next": "latest",
@@ -17,6 +19,8 @@
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^13.1.6",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
     "@types/gtag.js": "^0.0.12",
     "@types/node": "^18.11.18",
     "@types/react": "^18.0.27",
@@ -29,6 +33,8 @@
     "eslint-plugin-n": "^15.0.0",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.32.2",
+    "jest": "^29.4.2",
+    "jest-environment-jsdom": "^29.4.2",
     "typescript": "^4.9.4"
   },
   "engines": {
