add test of api/generateConversation

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -55,12 +55,9 @@
     "src/lib/OpenAI.d.ts",
     "**/*.ts",
     "**/*.tsx",
-    "src/utils/api/__test__/validateContent.test.jsst.js",
-    "src/utils/api/__test__/validateContent.test.jsst.js",
-    "src/utils/api/__test__/generateContent.test.js",
-    "src/utils/api/__test__/generateContent.test.js"
   ],
   "exclude": [
-    "node_modules"
+    "node_modules",
+    "__tests__"
   ],
 }
