--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
     "test:ci": "jest --ci"
   },
   "dependencies": {
+    "@notionhq/client": "^2.2.3",
     "next": "latest",
     "openai": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-is": "^18.2.0",
-    "styled-components": "^5.3.5",
-    "@notionhq/client": "^2.2.3"
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^13.1.6",
