--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@notionhq/client": "^2.2.3",
     "next": "latest",
-    "openai": "^3.1.0",
+    "openai": "latest",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-is": "^18.2.0",
