--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "lint": "next lint",
     "test": "jest --watch",
     "test:ci": "jest --ci"
   },
@@ -34,6 +35,7 @@
     "eslint-plugin-n": "^15.0.0",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-testing-library": "^5.10.2",
     "jest": "^29.4.2",
     "jest-environment-jsdom": "^29.4.2",
     "typescript": "^4.9.4"
