Feature/add notion db (#33)
* add test page

* add notion database

* remove useless constant

* fix error

* fix error handler

* modify handle error

* fix

* fix api

* fix

* fix

* fix logger

* edit test settings

* add test of utils/api functions

* add test of api/generateConversation

* update tests

* update new ChatGpt model

* update ReadMe

* update tests

* modify notion logger

* add GA Tracker back

* fix eslint

* fix test

* fix test path

* set log

* set env and eslint config

* update tracker

* try to fix notion unknown error

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,11 +14,17 @@
       "@/assets/*": [
         "src/assets/*"
       ],
+      "@/database": [
+        "src/database/index.ts"
+      ],
       "@/lib/*": [
         "src/lib/*"
       ],
       "@/utils/*": [
         "src/utils/*"
+      ],
+      "@/services/*": [
+        "src/services/*"
       ],
       "@/apps/*": [
         "src/apps/*"
@@ -52,11 +58,12 @@
   "include": [
     "next-env.d.ts",
     "src/global.d.ts",
-    "src/lib/OpenAI.d.ts",
+    "src/lib/*.d.ts",
     "**/*.ts",
-    "**/*.tsx"
+    "**/*.tsx",
   ],
   "exclude": [
-    "node_modules"
+    "node_modules",
+    "__tests__"
   ],
 }
