--- a/package.json
+++ b/package.json
@@ -1,15 +1,20 @@
 {
   "name": "openai-chatting-bot",
-  "version": "0.0.0",
+  "version": "0.0.2",
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "dev:track": "TRACK=true next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint",
+    "test": "jest --watch",
+    "test:ci": "jest --ci"
   },
   "dependencies": {
+    "@notionhq/client": "^2.2.3",
     "next": "latest",
-    "openai": "^3.1.0",
+    "openai": "latest",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-is": "^18.2.0",
@@ -17,6 +22,8 @@
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^13.1.6",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
     "@types/gtag.js": "^0.0.12",
     "@types/node": "^18.11.18",
     "@types/react": "^18.0.27",
@@ -25,10 +32,14 @@
     "@typescript-eslint/eslint-plugin": "^5.49.0",
     "@typescript-eslint/parser": "^5.49.0",
     "eslint": "^8.0.1",
+    "eslint-config-next": "^13.2.3",
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-n": "^15.0.0",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-testing-library": "^5.10.2",
+    "jest": "^29.4.2",
+    "jest-environment-jsdom": "^29.4.2",
     "typescript": "^4.9.4"
   },
   "engines": {
